--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-
+@import url('https://kit.fontawesome.com/a076d05399.js');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css');
 // include bootstrap
 @import "~bootstrap/scss/bootstrap";
 
